# valfisk

./: .clippy.toml  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .taplo.toml  Cargo.toml  Dockerfile  PRIVACY.md  README.md  build.rs  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  docker.yml  nix.yml  update-lock.yml  upload.yml
nix/: checks.nix  cross.nix  default.nix  derivation.nix  dev.nix  docker.nix  librusty_v8.nix  overlay.nix  package.nix  packages.nix
src/: analytics.rs  anthropic.rs  api.rs  config.rs  event_handler.rs  http.rs  intelligence.rs  main.rs  openrouter.rs  presence_api.rs  reqwest_client.rs  schedule.rs  starboard.rs  template_channel.rs
src/commands/: lighthouse.rs  mod.rs  owo.rs  ping.rs  pomelo.rs  presence.rs  say.rs  self_timeout.rs  shiggy.rs  sysinfo.rs  translate.rs  v8.rs  version.rs
src/commands/admin/: guilds.rs  mod.rs  presence.rs  say.rs  sysinfo.rs
src/commands/fun/: autoreply.rs  intelligence.rs  mod.rs  owo.rs  pomelo.rs  shiggy.rs
src/commands/moderation/: ban.rs  ban_reason.rs  kick.rs  mod.rs  purge.rs  purge_user.rs  rotate_logs.rs  timeout.rs  warn.rs
src/commands/useful/: code_expand.rs  dig.rs  exchange.rs  feeds.rs  lighthouse.rs  mod.rs  remind.rs  self_timeout.rs  suppress_embeds.rs  translate.rs  typst.rs  unicode.rs  user.rs
src/commands/utils/: config.rs  mod.rs  ping.rs  presence.rs  rotate_color_roles.rs  say.rs  sysinfo.rs  template_channel.rs  version.rs
src/handlers/: autoreply.rs  code_expansion.rs  config.rs  dm.rs  error.rs  error_handling.rs  github_expansion.rs  intelligence.rs  log.rs  mod.rs  safe_browsing.rs  starboard.rs
src/safe_browsing/: canonicalize.rs  mod.rs  models.rs  rice.rs
src/storage/: code_expansion.rs  log.rs  mod.rs  presence.rs  redis_util.rs  reminder.rs
src/ucd/: build.rs  data.rs  mod.rs
src/utils/: actix.rs  actix_utils.rs  axum.rs  error_handling.rs  exit_code_error.rs  mod.rs  nanoid.rs  pluralize.rs  serenity.rs
