# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "valfisk"
version = "0.1.0"
edition = "2024"

description = "Next-generation general purpose Discord app"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "AGPL-3.0-only"
publish = false

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
bytesize = "2.1.0"
chrono = "0.4.42"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
futures-util = "0.3.31"
hickory-resolver = { version = "0.25.2", features = ["https-ring", "dnssec-ring", "webpki-roots"] }
humantime = "2.3.0"
indexmap = { version = "2.12.0", features = ["serde"] }
oxipng = { version = "9.1", features = ["parallel", "zopfli", "filetime"], default-features = false }
percent-encoding = "2.3.2"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
rand = "0.9.2"
rayon = "1.11.0"
redis = { version = "0.32.7", features = ["tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls-webpki-roots", "json", "deflate", "gzip", "brotli", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
typst = "0.14.0"
typst-assets = { version = "0.13.1", features = ["fonts"] }
typst-render = "0.13.1"
unic = "0.9.0"
url = "2.5.7"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

unreadable_literal = "allow"
module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"
doc_markdown = "allow"

[lints.rust]
unsafe_code = "forbid"
