# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "valfisk"
version = "0.1.0"
edition = "2024"

description = "Next-generation general purpose Discord app"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "AGPL-3.0-only"
publish = false

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
bytesize = "2.3.1"
chrono = "0.4.43"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
futures-util = "0.3.32"
hickory-resolver = { version = "0.25.2", features = ["https-aws-lc-rs", "dnssec-aws-lc-rs", "webpki-roots"] }
humantime = "2.3.0"
indexmap = { version = "2.13.0", features = ["serde"] }
percent-encoding = "2.3.2"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
rand = "0.10.0"
rayon = "1.11.0"
redis = { version = "1.0.3", features = ["tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["query", "json", "deflate", "gzip", "brotli", "zstd"] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
unic = "0.9.0"
url = "2.5.8"
webpki-roots = "1.0.6"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

unreadable_literal = "allow"
module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"
doc_markdown = "allow"

[lints.rust]
unsafe_code = "forbid"
