# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "valfisk"
version = "0.1.0"
edition = "2024"

description = "Next-generation general purpose Discord app"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "AGPL-3.0-only"
publish = false

[dependencies]
aws-lc-rs = "1.17.3"
base64 = "0.22.1"
bytesize = "2.4.2"
chrono = "0.4.45"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
futures-util = "0.3.33"
hickory-resolver = { version = "0.26.1", features = ["https-aws-lc-rs", "dnssec-aws-lc-rs", "webpki-roots"] }
humantime = "2.4.0"
indexmap = { version = "2.14.0", features = ["serde"] }
percent-encoding = "2.3.2"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
rand = "0.10.2"
rayon = "1.12.0"
redis = { version = "1.4.1", features = ["tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager"] }
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["query", "json", "deflate", "gzip", "brotli", "zstd"] }
rustls = "0.23.42"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sysinfo = "0.39.6"
tokio = { version = "1.53.1", features = ["full"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

unreadable_literal = "allow"
module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"
doc_markdown = "allow"

[lints.rust]
unsafe_code = "forbid"
